argocd/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tunnel
  namespace: argocd
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: argocd.mydomain.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
